examples/expected/check_pipeline_time_violation.txt
error[E2005]: impure function in deterministic pipeline: step 't' has forbidden effect Time
help: remove non-deterministic calls (random/time) from steps or drop @deterministic
  --> examples/pipeline/time_violation.tp:4:10
   |
 4 |     step("t") { time() },
   |          ^^^^^^^^^^^^^^^
